methods.picture.PictureMono2.scala.error
Erreur de compilation :
PictureMono2:21: error: ';' expected but ',' found.
  droite(),avance();avance();avance();avance();avance();avance();avance();avance();avance();avance();avance();avance();avance();avance();gauche()
          ^